--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Theo's Example Index Page</title>
+        <title>Theo's Example Index Page: reloaded</title>
     </head>
     <body>
         <p>This is an example of a simple HTML page with one paragraph.</p>
