--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
         <title>Theo's Example Index Page: reloaded</title>
     </head>
     <body>
+    	<h1>Lorem ipsum dolor sit amet consectetuer adipiscing elit</h1>
         <p>This is an example of a simple HTML page with one paragraph.</p>
+
+        <h1>Aenean commodo ligula eget dolor aenean massa</h1>
+
     </body>
 </html>
