--- a/index.html
+++ b/index.html
@@ -8,6 +8,11 @@
         <p>This is an example of a simple HTML page with one paragraph.</p>
 
         <h1>Aenean commodo ligula eget dolor aenean massa</h1>
+        <ul>
+		  <li>Lorem ipsum dolor sit amet consectetuer.</li>
+		  <li>Aenean commodo ligula eget dolor.</li>
+		  <li>Aenean massa cum sociis natoque penatibus.</li>
+		</ul>
 
     </body>
 </html>
