--- a/index.html
+++ b/index.html
@@ -39,5 +39,100 @@
 		<h2>edit</h2>
 		<h1>regards, theo</h1>
 
+		<h1>some lists</h1>
+		<dl>
+		   <dt>Definition list</dt>
+		   <dd>Consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna
+		aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
+		commodo consequat.</dd>
+		   <dt>Lorem ipsum dolor sit amet</dt>
+		   <dd>Consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna
+		aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
+		commodo consequat.</dd>
+		</dl>
+
+		<nav>
+		  <ul>
+		    <li><a href="#nowhere" title="Lorum ipsum dolor sit amet">Lorem</a></li>
+		    <li><a href="#nowhere" title="Aliquam tincidunt mauris eu risus">Aliquam</a></li>
+		    <li><a href="#nowhere" title="Morbi in sem quis dui placerat ornare">Morbi</a></li>
+		    <li><a href="#nowhere" title="Praesent dapibus, neque id cursus faucibus">Praesent</a></li>
+		    <li><a href="#nowhere" title="Pellentesque fermentum dolor">Pellentesque</a></li>
+		  </ul>
+		</nav>
+
+		<table>
+		  <thead>
+		    <tr>
+		      <th></th>
+		      <th></th>
+		      <th></th>
+		      <th></th>
+		    </tr>
+		  </thead>
+		  <tbody>
+		    <tr>
+		      <td></td>
+		      <td></td>
+		      <td></td>
+		      <td></td>
+		    </tr>
+		    <tr>
+		      <td></td>
+		      <td></td>
+		      <td></td>
+		      <td></td>
+		    </tr>
+		    <tr>
+		      <td></td>
+		      <td></td>
+		      <td></td>
+		      <td></td>
+		    </tr>
+		  </tbody>
+		</table>
+
+
+		<form action="#" method="post">
+		    <div>
+		         <label for="name">Text Input:</label>
+		         <input type="text" name="name" id="name" value="" tabindex="1" />
+		    </div>
+
+		    <div>
+		         <h4>Radio Button Choice</h4>
+
+		         <label for="radio-choice-1">Choice 1</label>
+		         <input type="radio" name="radio-choice-1" id="radio-choice-1" tabindex="2" value="choice-1" />
+
+		     <label for="radio-choice-2">Choice 2</label>
+		         <input type="radio" name="radio-choice-2" id="radio-choice-2" tabindex="3" value="choice-2" />
+		    </div>
+
+		  <div>
+		    <label for="select-choice">Select Dropdown Choice:</label>
+		    <select name="select-choice" id="select-choice">
+		      <option value="Choice 1">Choice 1</option>
+		      <option value="Choice 2">Choice 2</option>
+		      <option value="Choice 3">Choice 3</option>
+		    </select>
+		  </div>
+
+		  <div>
+		    <label for="textarea">Textarea:</label>
+		    <textarea cols="40" rows="8" name="textarea" id="textarea"></textarea>
+		  </div>
+
+		  <div>
+		      <label for="checkbox">Checkbox:</label>
+		    <input type="checkbox" name="checkbox" id="checkbox" />
+		    </div>
+
+		  <div>
+		      <input type="submit" value="Submit" />
+		    </div>
+		</form>
+            
+
     </body>
 </html>
