made the first change

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Theo's Example Index Page: reloaded</title>
+        <title>Theo's Examples Index Page: reloaded</title>
     </head>
     <body>
     	<h1>Lorem ipsum dolor sit amet consectetuer adipiscing elit</h1>
